--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.24.0",
+    "@ant-design/icons": "^6.1.0",
+    "antd": "^5.27.6",
+    "docxtemplater": "^3.66.7",
+    "firebase": "^12.4.0",
+    "next": "15.5.6",
+    "pizzip": "^3.2.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "typescript": "^5"
   }
 }
